# python-mcp-server-starter-kit

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: ARCHITECTURE_DIAGRAMS.md  CONFIG_ENVIRONMENT.md  DOCKER_GUIDE.md  IMPLEMENTATION_GUIDE.md  MCP_SERVER.md  TESTING_GUIDE.md  TOOL_SPEC_GUIDE.md
